<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/YP_White" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        style="@style/MainButtonStyle"
        android:layout_marginTop="@dimen/button_margin_vertical"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        android:textAllCaps="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_button"
        style="@style/MainButtonStyle"
        android:text="@string/media"
        app:icon="@drawable/ic_playlist"
        android:textAllCaps="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        style="@style/MainButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        />

</LinearLayout>