<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_White"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/screen_padding"
        android:paddingTop="@dimen/screen_padding"
        android:paddingEnd="@dimen/screen_padding"
        android:paddingBottom="@dimen/screen_padding">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/settings"
            android:textColor="@color/YP_Black"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/setting_screen_layouts"
            android:layout_marginStart="@dimen/button_margin_horizontal"
            android:layout_marginEnd="@dimen/button_margin_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/dark_theme"
            android:textColor="@color/YP_Black"
            android:textSize="@dimen/settings_text_size"
            app:layout_constraintStart_toStartOf="parent"
            >
        </TextView>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:layout_marginRight="@dimen/button_margin_horizontal">
        </Switch>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/setting_screen_layouts"
            android:layout_marginStart="@dimen/button_margin_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/share"
            android:textColor="@color/YP_Black"
            android:textSize="@dimen/settings_text_size">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_horizontal"
            android:src="@drawable/ic_share"
            >

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/setting_screen_layouts"
            android:layout_marginStart="@dimen/button_margin_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/support"
            android:textColor="@color/YP_Black"
            android:textSize="@dimen/settings_text_size">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_horizontal"
            android:src="@drawable/ic_support">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/setting_screen_layouts"
            android:layout_marginStart="@dimen/button_margin_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/agreement"
            android:textColor="@color/YP_Black"
            android:textSize="@dimen/settings_text_size">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin_horizontal"
            android:src="@drawable/arrow_forward">

        </ImageView>

    </LinearLayout>


</LinearLayout>